--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,13 @@ body{
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
 }
+
 ul{
   margin: 0px;
   padding: 0px;
   list-style: none;
 }
+
 a{
   text-decoration: none;
 }
@@ -14,6 +16,7 @@ a{
 .header-bg{
   background-color: #000;
 }
+
 .header{
   display: flex;
   flex-wrap: wrap;
@@ -36,8 +39,46 @@ a{
   color: #ffffff;
   display: inline-block;
   padding: 16px 0px;
+  position: relative;
+}
+.header-menu a:after{
+  content: "";
+  display: block;
+  width: 0%;
+  background-color: #ffffff;
+  margin-top: 4px;
+  position: absolute;
+}
+.header-menu a:hover::after{
+  transition: 0.3s;
+  height: 2px;
+  width: 100%;
 }
 
+
 @media (max-width: 800px) {
-  
+  .header-menu{
+    gap: 20px;
+  }
+  .header-menu a {
+    background: #111;
+    padding: 12px 16px;
+    border-radius: 4px;
+  }
+  .header-menu a:hover{
+    background: #2e2e2e ;
+  }
+  .header a::after{
+    display: none;
+  }
+}
+
+@media (max-width: 600px){
+  .header-menu{
+    gap: 12px;
+  }
+  .header-menu a{
+    padding: 8px 12px;
+    font-size: 14px;
+  }
 }
