--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,8 @@
-body{
-  margin: 0px;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import url(./global/global.css);
+@import url(./global/header.css);
 
-ul{
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
-}
+/* home */
+@import url(./home/introducao.css);
 
-a{
-  text-decoration: none;
-}
-
-.header-bg{
-  background-color: #000;
-}
-
-.header{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
-  align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  max-width: 1200px;
-}
-.header-menu{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-.header-menu a{
-  font-size: 18px;
-  color: #ffffff;
-  display: inline-block;
-  padding: 16px 0px;
-  position: relative;
-}
-/*Criando uma animação abaixo do link quando a tela está cheia*/
-.header-menu a:after{ 
-  content: "";
-  display: block;
-  width: 0%;
-  background-color: #ffffff;
-  margin-top: 4px;
-  position: absolute;
-}
-.header-menu a:hover::after{
-  transition: 0.3s;
-  height: 2px;
-  width: 100%;
-}
-@media (max-width: 800px) {
-  .header-menu{
-    gap: 20px;
-  }
-  .header-menu a {
-    background: #404040;
-    padding: 12px 16px;
-    border-radius: 4px;
-  }
-  .header-menu a:hover{
-    background: #404040 ;
-  }
-  .header a::after{
-    display: none;
-  }
-}
-
-@media (max-width: 600px){
-  .header-menu{
-    gap: 12px;
-  }
-  .header-menu a{
-    padding: 8px 12px;
-    font-size: 14px;
-  }
-}
+/* utilidades */
+@import url(./utilidades/componentes.css);
