--- a/css/global/header.css
+++ b/css/global/header.css
@@ -1,6 +1,6 @@
 /* Menu */
 .header-bg{
-  background-color: #000;
+  background-color: var(--cor-12);
 }
 
 .header{
@@ -22,7 +22,6 @@
 }
 .header-menu a{
   font-size: 18px;
-  color: #ffffff;
   display: inline-block;
   padding: 16px 0px;
   position: relative;
@@ -34,7 +33,7 @@
   content: "";
   display: block;
   width: 0%;
-  background-color: #ffffff;
+  background-color: var(--cor-0);
   margin-top: 4px;
   position: absolute;
 }
@@ -48,12 +47,12 @@
     gap: 20px;
   }
   .header-menu a {
-    background: #404040;
+    background: var(--cor-11);
     padding: 12px 16px;
     border-radius: 4px;
   }
   .header-menu a:hover{
-    background: #404040 ;
+    background: var(--cor-10) ;
   }
   .header a::after{
     display: none;
