--- a/css/home/introducao.css
+++ b/css/home/introducao.css
@@ -1,8 +1,7 @@
 /* Introdução */
 .introducao-bg{
-  background: #000;
-  color: #ffffff;
-  box-shadow: inset 0 -120px #ffffff;
+  background: var(--cor-12);
+  box-shadow: inset 0 -120px var(--cor-0);
 }
 .introducao{
   display: grid;
@@ -27,23 +26,10 @@
 }
 .introducao h1{
   margin-bottom: 32px;
-  font-size: 64px;
-  line-height: 1.125;
-  font-family: 'Poppins';
-  font-weight: 600;
 }
 .introducao p{
   margin-bottom: 20px;
-  font-size: 24px;
-  line-height: 1.5;
-  color: #b2b2b2;
-  font-family: 'Roboto';
-  font-weight: 400;
 }
-.introducao h1 span{
-  color: #fb0;
-}
-
 
 @media (max-width: 1200px){
   .introducao h1{
@@ -55,9 +41,9 @@
 }
 @media (max-width: 800px){
   .introducao-bg{
-    background: #111;
+    background: var(--cor-11);
     padding-top: 40px;
-    box-shadow: inset 0 -60px #ffffff;
+    box-shadow: inset 0 -60px var(--cor-0);
   }
   .introducao{
     grid-template-columns: 1fr;
