--- a/css/global/global.css
+++ b/css/global/global.css
@@ -4,7 +4,7 @@ body{
   padding-bottom: 600px;
   color: #111111;
 }
-h1, ul, p{
+h1,h2, h3, h4, ul, p{
   margin: 0px;
 }
 
@@ -22,4 +22,7 @@ a{
 img{
   max-width: 100%;
   display: block;
+}
+[src$=".jpg"]{ /*Comando que altera apenas os aruivos terminados em jpg*/
+  border-radius: 4px;
 }
