--- a/css/global/header.css
+++ b/css/global/header.css
@@ -8,12 +8,9 @@
   flex-wrap: wrap;
   gap: 20px;
   justify-content: space-between;
-  margin-left: auto;
-  margin-right: auto;
   align-items: center;
-  padding: 20px;
-  box-sizing: border-box;
-  max-width: 1200px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .header-menu{
   display: flex;
