--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 /* home */
 @import url(./home/introducao.css);
 @import url(./home/parceiros.css);
+@import url(./home/depoimento.css);
 
 /* utilidades */
 @import url(./utilidades/componentes.css);
