--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url(./utilidades/cores.css);
 
 @import url(./global/header.css);
+@import url(./global/footer.css);
 
 /* home */
 @import url(./home/introducao.css);
