--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@
 
 /* Bicicletas */
 @import url(./bicicletas/bicicletas-lista.css);
+@import url(./bicicletas/bicicletas.css);
 
 /* Tecnologia */
 @import url(./home/tecnologia.css);
