--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,9 @@
 @import url(./bicicletas/bicicletas-lista.css);
 @import url(./bicicletas/bicicletas.css);
 
+/* Bicicleta */
+@import url(./bicicleta/bicicleta.css);
+
 /* Tecnologia */
 @import url(./home/tecnologia.css);
 
