--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@
 
 /* Bicicleta */
 @import url(./bicicleta/bicicleta.css);
+@import url(./bicicleta/seguro.css);
 
 /* Tecnologia */
 @import url(./home/tecnologia.css);
