--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 /* utilidades */
 @import url(./utilidades/componentes.css);
+@import url(./utilidades/formulario.css);
 
 /* Bicicletas */
 @import url(./bicicletas/bicicletas-lista.css);
@@ -32,3 +33,7 @@
 
 /* Termos */
 @import url(./termos/termos.css);
+
+/* Contato */
+@import url(./contato/contato.css);
+@import url(./contato/lojas.css);
