--- a/css/utilidades/componentes.css
+++ b/css/utilidades/componentes.css
@@ -87,7 +87,7 @@
   }
   .titulo p{
     font-size: 1rem;
-    text-transform: lowercase;
+    text-transform: uppercase;
     font-weight: 400;
   }
 }
