--- a/css/global/global.css
+++ b/css/global/global.css
@@ -20,6 +20,7 @@ a{
 
 img{
   max-width: 100%;
+  height: auto;
   display: block;
 }
 [src$=".jpg"]{ /*Comando que altera apenas os aruivos terminados em jpg*/
