--- a/css/global/header.css
+++ b/css/global/header.css
@@ -31,7 +31,8 @@
   margin-top: 4px;
   position: absolute;
 }
-.header-menu a:hover::after{
+.header-menu a:hover::after,
+.header-menu a.ativo::after{
   transition: 0.3s;
   height: 2px;
   width: 100%;
