--- a/css/seguros/perguntas.css
+++ b/css/seguros/perguntas.css
@@ -12,26 +12,40 @@
 .perguntas dl > div:nth-child(odd){
   background-color: var(--cor-1);
 }
-.perguntas dt::before{
+.perguntas button::before{
   content: "";
   display: inline-block;
   width: 12px;
   height: 8px;
   background-color: var(--cor-p1);
 }
-.perguntas dt{
+.perguntas button{
+  border: none;
+  background: none;
   display: grid;
   grid-template-columns: auto 1fr auto;
   align-items: center;
   gap: 8px;
   cursor: pointer;
+  width: 100%;
+  text-align: left;
 }
-.perguntas dt::after{
+.perguntas button::after{
   content: "";
   display: inline-block;
   width: 14px;
   height: 6px;
   background: url("../../img/icones/seta-abrir.svg");
+}
+.perguntas button:hover::after,
+.perguntas button[aria-expanded="true"]::after{
+  transform: rotate(180deg);
+}
+.perguntas dd{
+  display: none;
+}
+.perguntas dd.ativo{
+  display: block;
 }
 .perguntas dd{
   padding-left: 20px;
